<resources>
    <string name="app_name">RecyclerViewDemo</string>
    <string name="fish_name">fish name</string>
    <string name="user_information">User Information</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_user">Welcome User</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="user">+ User</string>
    <string name="new_user">New User</string>
    <string name="name">Name</string>
    <string name="age_in_years_only">Age (in years only)</string>
    <string name="address">Address</string>
    <string name="contact">Contact</string>
    <string name="save_and_close">Save and Close</string>
    <string name="age">Age</string>
</resources>